v4.2.0/_sources/lcls-twincat-motion_nc.rst.txt

NC Settings
-----------

.. csv-table::
    :header: Axis ID, Name
    :align: center

        1, Axis_TestStateInitTiming
        2, Axis_AxisParameter_Test
        3, Axis_PositionStateRead_Test
        4, Axis_AtPositionState_Test
        5, Axis_TestHelperSetAndMove_Test
        6, Axis_PositionStateReadND_Test_1
        7, Axis_PositionStateReadND_Test_2
        8, Axis_PositionStateReadND_Test_3
        9, Axis_PositionStateMove_Test
        10, Axis_PositionStateMoveND_Test_1
        11, Axis_PositionStateMoveND_Test_2
        12, Axis_PositionStateMoveND_Test_3
        13, Axis_PositionStateND_Test_1
        14, Axis_PositionStateND_Test_2
        15, Axis_PositionStateND_Test_3
        16, Axis_NCErrorFFO_Test
        17, Axis_PositionStatePMPSND_Test_1
        18, Axis_PositionStatePMPSND_Test_2
        19, Axis_PositionStatePMPSND_Test_3
        20, Axis_StatePMPSEnable_Test
        21, Axis_PositionStateReadND_Test_4
        22, Axis_PositionStateReadND_Test_5
        23, Axis_MotionVirtualFrameRx_Test
        24, Axis_MotionVirtualFrameRy_Test
        25, Axis_MotionVirtualFrameRz_Test
        26, Axis_MotionVirtualFrameVx_Test
        27, Axis_MotionVirtualFrameVy_Test
        28, Axis_MotionVirtualFrameVz_Test



Axis 1: Axis_TestStateInitTiming
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 1
    Name, Axis_TestStateInitTiming
    AxisFolder, Unit Test Axes
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 1
    Id, 1
    OtherSettings:AllowMotionCmdToSlave, true



Axis 2: Axis_AxisParameter_Test
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 2
    Name, Axis_AxisParameter_Test
    AxisFolder, Unit Test Axes
    AxisType, 1
    CreateSymbols, true
    Dynamic:AccelerationMaximum, 2
    Dynamic:DecelerationMaximum, 3
    Enc:EncType, 1
    Enc:Offset, 12
    Enc:SoftEndMaxControl:Enable, true
    Enc:SoftEndMaxControl:Range, 5
    Enc:SoftEndMinControl:Enable, true
    Enc:SoftEndMinControl:Range, 4
    Id, 2
    OtherSettings:AllowMotionCmdToSlave, true
    PositionAreaControl:Range, 1
    Velo:Maximum, 1



Axis 3: Axis_PositionStateRead_Test
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 3
    Name, Axis_PositionStateRead_Test
    AxisFolder, Unit Test Axes
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 1
    Id, 3
    OtherSettings:AllowMotionCmdToSlave, true



Axis 4: Axis_AtPositionState_Test
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 4
    Name, Axis_AtPositionState_Test
    AxisFolder, Unit Test Axes
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 1
    Id, 4
    OtherSettings:AllowMotionCmdToSlave, true



Axis 5: Axis_TestHelperSetAndMove_Test
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 5
    Name, Axis_TestHelperSetAndMove_Test
    AxisFolder, Unit Test Axes
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 1
    Id, 5
    OtherSettings:AllowMotionCmdToSlave, true



Axis 6: Axis_PositionStateReadND_Test_1
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 6
    Name, Axis_PositionStateReadND_Test_1
    AxisFolder, Unit Test Axes
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 1
    Id, 6
    OtherSettings:AllowMotionCmdToSlave, true



Axis 7: Axis_PositionStateReadND_Test_2
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 7
    Name, Axis_PositionStateReadND_Test_2
    AxisFolder, Unit Test Axes
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 1
    Id, 7
    OtherSettings:AllowMotionCmdToSlave, true



Axis 8: Axis_PositionStateReadND_Test_3
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 8
    Name, Axis_PositionStateReadND_Test_3
    AxisFolder, Unit Test Axes
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 1
    Id, 8
    OtherSettings:AllowMotionCmdToSlave, true



Axis 9: Axis_PositionStateMove_Test
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 9
    Name, Axis_PositionStateMove_Test
    AxisFolder, Unit Test Axes
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 1
    Id, 9
    OtherSettings:AllowMotionCmdToSlave, true



Axis 10: Axis_PositionStateMoveND_Test_1
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 10
    Name, Axis_PositionStateMoveND_Test_1
    AxisFolder, Unit Test Axes
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 1
    Id, 10
    OtherSettings:AllowMotionCmdToSlave, true



Axis 11: Axis_PositionStateMoveND_Test_2
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 11
    Name, Axis_PositionStateMoveND_Test_2
    AxisFolder, Unit Test Axes
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 1
    Id, 11
    OtherSettings:AllowMotionCmdToSlave, true



Axis 12: Axis_PositionStateMoveND_Test_3
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 12
    Name, Axis_PositionStateMoveND_Test_3
    AxisFolder, Unit Test Axes
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 1
    Id, 12
    OtherSettings:AllowMotionCmdToSlave, true



Axis 13: Axis_PositionStateND_Test_1
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 13
    Name, Axis_PositionStateND_Test_1
    AxisFolder, Unit Test Axes
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 1
    Id, 13
    OtherSettings:AllowMotionCmdToSlave, true



Axis 14: Axis_PositionStateND_Test_2
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 14
    Name, Axis_PositionStateND_Test_2
    AxisFolder, Unit Test Axes
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 1
    Id, 14
    OtherSettings:AllowMotionCmdToSlave, true



Axis 15: Axis_PositionStateND_Test_3
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 15
    Name, Axis_PositionStateND_Test_3
    AxisFolder, Unit Test Axes
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 1
    Id, 15
    OtherSettings:AllowMotionCmdToSlave, true



Axis 16: Axis_NCErrorFFO_Test
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 16
    Name, Axis_NCErrorFFO_Test
    AxisFolder, Unit Test Axes
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 1
    Id, 16
    OtherSettings:AllowMotionCmdToSlave, true



Axis 17: Axis_PositionStatePMPSND_Test_1
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 17
    Name, Axis_PositionStatePMPSND_Test_1
    AxisFolder, Unit Test Axes
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 1
    Id, 17
    OtherSettings:AllowMotionCmdToSlave, true



Axis 18: Axis_PositionStatePMPSND_Test_2
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 18
    Name, Axis_PositionStatePMPSND_Test_2
    AxisFolder, Unit Test Axes
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 1
    Id, 18
    OtherSettings:AllowMotionCmdToSlave, true



Axis 19: Axis_PositionStatePMPSND_Test_3
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 19
    Name, Axis_PositionStatePMPSND_Test_3
    AxisFolder, Unit Test Axes
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 1
    Id, 19
    OtherSettings:AllowMotionCmdToSlave, true



Axis 20: Axis_StatePMPSEnable_Test
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 20
    Name, Axis_StatePMPSEnable_Test
    AxisFolder, Unit Test Axes
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 1
    Id, 20
    OtherSettings:AllowMotionCmdToSlave, true



Axis 21: Axis_PositionStateReadND_Test_4
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 21
    Name, Axis_PositionStateReadND_Test_4
    AxisFolder, Unit Test Axes
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 1
    Id, 21
    OtherSettings:AllowMotionCmdToSlave, true



Axis 22: Axis_PositionStateReadND_Test_5
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 22
    Name, Axis_PositionStateReadND_Test_5
    AxisFolder, Unit Test Axes
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 1
    Id, 22
    OtherSettings:AllowMotionCmdToSlave, true



Axis 23: Axis_MotionVirtualFrameRx_Test
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 23
    Name, Axis_MotionVirtualFrameRx_Test
    AxisFolder, MotionVirtualFrame
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 1
    GroupId, 29
    Id, 23
    OtherSettings:AllowMotionCmdToSlave, true



Axis 24: Axis_MotionVirtualFrameRy_Test
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 24
    Name, Axis_MotionVirtualFrameRy_Test
    AxisFolder, MotionVirtualFrame
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 1
    GroupId, 30
    Id, 24
    OtherSettings:AllowMotionCmdToSlave, true



Axis 25: Axis_MotionVirtualFrameRz_Test
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 25
    Name, Axis_MotionVirtualFrameRz_Test
    AxisFolder, MotionVirtualFrame
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 1
    GroupId, 31
    Id, 25
    OtherSettings:AllowMotionCmdToSlave, true



Axis 26: Axis_MotionVirtualFrameVx_Test
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 26
    Name, Axis_MotionVirtualFrameVx_Test
    AxisFolder, MotionVirtualFrame
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 7
    Enc:MaxCount, #xffffffff
    Enc:ReferenceSystem, 1
    Enc:ScaleFactorNumerator, 1e-06
    GroupId, 32
    Id, 26
    OtherSettings:AllowMotionCmdToSlave, true



Axis 27: Axis_MotionVirtualFrameVy_Test
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 27
    Name, Axis_MotionVirtualFrameVy_Test
    AxisFolder, MotionVirtualFrame
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 7
    Enc:MaxCount, #xffffffff
    Enc:ReferenceSystem, 1
    Enc:ScaleFactorNumerator, 1e-06
    GroupId, 33
    Id, 27
    OtherSettings:AllowMotionCmdToSlave, true



Axis 28: Axis_MotionVirtualFrameVz_Test
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Setting, Value
    :align: center

    Axis ID, 28
    Name, Axis_MotionVirtualFrameVz_Test
    AxisFolder, MotionVirtualFrame
    AxisType, 1
    CreateSymbols, true
    Enc:EncType, 7
    Enc:MaxCount, #xffffffff
    Enc:ReferenceSystem, 1
    Enc:ScaleFactorNumerator, 1e-06
    GroupId, 34
    Id, 28
    OtherSettings:AllowMotionCmdToSlave, true


